Wed Jan 30 13:29:21 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Patch from Jens Laas <jens.laas@data.slu.se>
  * Adds --zoom option. Here's what he said about it:
    > What it does:
    > zooms images by a fixed amount but never larger than the screen.
    > Why:
    > This is nice if you got a collection of images where some are small and
    > can stand a small zoom. Large images are unaffected.
    > When does it work, and how?
    > You have to be in fullscreen mode _and_ have auto-zoom turned on.
    > "feh -FZ --zoom 130 imagefile" will do the trick.
    > -zoom percent  -- is the new switch.
    >                   100 = orignal size,
    >                   130 is 30% larger.
  * I tweaked it abit to allow it to work (differently) without -Z.
    feh -F --zoom 200 will zoom each image to 200%, regardless of the
    resulting size. feh -FZ --zoom 200 will zoom each image up to a maximum
    of 200%, but without generating an image larger than the screen.

Sat Jan 26 16:20:43 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Use giblib fontstyles for menus, instead of hardcoding the shadow.
  * Let users choose menu style with --menu-style. Standard giblib
    semantics.

Sat Jan 26 15:34:26 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * make sure fullscreen windows are really fullscreen.
  * Haha! feh uses giblib now, pointless me maintaining two list
    implementations and two imlib2 wrappers. Plus now I can add fontstyles :)

Sat Jan 26 14:10:54 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Goodbye, non-free fonts, hello, free font. Turns out the guy who made
    those "public domain" fonts doesn't actually want to release them under a
    free license, so they gotta go.

Mon Jan 14 19:51:18 2002  Tom Gilbert  <tom@linuxbrit.co.uk>

	* Fixed --bg-seamless from the commandline.
	* When you set a bg with feh, it now stores the necessary
	commandline to restore that bg in ~/.fehbg. So for non-E