@@ -20,7 +20,7 @@ feh_LDADD         = -lX11 @IMLIB_LIBS@ @GIBLIB_LIBS@
 
 images_DATA = about.png menubg.png menubg_chrome.png menubg_brushed.png \
 menubg_pastel.png menubg_aluminium.png menubg_aqua.png \
-menubg_wood.png menubg_britney.png
+menubg_wood.png menubg_britney.png menubg_black.png
 
 imagesdir=$(prefix)/share/feh/images
 EXTRA_DIST = $(images_DATA)
