@@ -1,3 +1,7 @@
+Wed Jan 30 13:54:29 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>
+
+  * New menu colour/style - "feh -Tblack src/testimages"
+
 Wed Jan 30 13:29:21 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>
 
   * Patch from Jens Laas <jens.laas@data.slu.se>
